--- a/gym/templates/local_gyms.html
+++ b/gym/templates/local_gyms.html
@@ -6,9 +6,78 @@
 <head>
     <meta charset="UTF-8">
     <title>Local Gyms - Gymmy</title>
+    <style>
+        #map {
+            height: 400px;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    
+    <div style="justify-content: center; text-align: center;">
+    <h1>Local Gyms</h1>
+    <div id="map"></div>
+    <div>
+
+    <script>
+        function initMap() {
+            // Show loading indicator
+            document.getElementById('map').innerHTML = '<div class="loading-indicator">Loading...</div>';
+
+            // Check if geolocation is supported by the browser
+            if (navigator.geolocation) {
+                // Get the user's current position
+                navigator.geolocation.getCurrentPosition(function(position) {
+                    var userLocation = {
+                        lat: position.coords.latitude,
+                        lng: position.coords.longitude
+                    };
+
+                    var map = new google.maps.Map(document.getElementById('map'), {
+                        center: userLocation,
+                        zoom: 10
+                    });
+
+                    // Use the user's location as the center for nearby search
+                    var service = new google.maps.places.PlacesService(map);
+                    service.nearbySearch({
+                        location: userLocation,
+                        radius: 10000,
+                        type: ['gym']
+                    }, callback);
+
+                    function callback(results, status) {
+                        if (status === google.maps.places.PlacesServiceStatus.OK) {
+                            for (var i = 0; i < results.length; i++) {
+                                createMarker(results[i]);
+                            }
+                        }
+                    }
+
+                    function createMarker(place) {
+                        var marker = new google.maps.Marker({
+                            map: map,
+                            position: place.geometry.location
+                        });
+
+                        var infowindow = new google.maps.InfoWindow({
+                            content: '<strong>' + place.name + '</strong><br>' + place.vicinity
+                        });
+
+                        marker.addListener('click', function() {
+                            infowindow.open(map, marker);
+                        });
+                    }
+                });
+            } else {
+                // Browser doesn't support geolocation
+                // You can set a default location here
+                console.log('Geolocation is not supported by this browser.');
+            }
+        }
+    </script>
+    <!-- Include the Google Maps JavaScript API with your API key -->
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAfcXsSn8i8yEmFQ3RItZfrK1phciuJYrw&libraries=places&callback=initMap" async defer></script>
 </body>
 </html>
 
