--- a/gym/templates/navbar.html
+++ b/gym/templates/navbar.html
@@ -29,6 +29,9 @@
                 </div>
             </a>
             </div>
+            <li class="nav-item active">
+              <a class="nav-link" href="{% url 'chat_home' %}" style="color: #ffffff;">Message Icon</a>
+            </li>
             <li class="nav-item" style="list-style: none;">
               <a class="nav-link" href="{% url 'calendar' %}" style="color: #ffffff;"><img src="{% static 'calendar.png' %}" width="50" height="50"/></a>
             </li>
