--- a/gym/templates/room.html
+++ b/gym/templates/room.html
@@ -54,17 +54,19 @@ h2{
     color: black;
     border-radius: 10px;
     padding: 5px;
-   
 }
+ a {
+  text-decoration: none;
+ }
 
 </style>
 <script   src="https://code.jquery.com/jquery-3.1.1.min.js"   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="   crossorigin="anonymous"></script>
 </head>
 <body>
-  <a href="{% url 'chat_home'%}">
+  <a href="javascript:history.back()">
     <h1 class="backbutton">Back</h1>
   </a>
-    <h2>Conversation with {{ 'insert name here' }}</h2>
+    <h2>Chat History</h2>
 
 <div id="display">
 
@@ -85,7 +87,7 @@ h2{
                 $("#display").empty();
                 for (var key in response.messages)
                 {
-                    var temp="<div class='container darker'><b>"+response.messages[key].user+"</b><p>"+response.messages[key].value+"</p><span class='time-left'>"+response.messages[key].date+"</span></div>";
+                    var temp="<div class='container darker'><b>"+response.messages[key].user+"</b>   "+response.messages[key].date+"<p>"+response.messages[key].value+"</p><span class='time-left'>"+"</span></div>";
                     $("#display").append(temp);
                 }
             },
@@ -95,6 +97,7 @@ h2{
         });
     },1000);
     })
+    
     </script>
 
 <div class="container">
@@ -131,7 +134,7 @@ h2{
     }
     </style>
 <form id="post-form">
-    {% csrf_token %}
+  {% csrf_token %}
     <input type="hidden" name="username" id="username" value="{{username}}"/>
     <input type="hidden" name="room_id" id="room_id" value="{{room_details.id}}"/>
     <input type="text" name="message" id="message" width="100px" />
